testsuite/tests/interpreter_errors/invalid_field_access_nullable/test.out
main.adb

Error: Invalid direct access on node of kind ConstantAbsent?

objects[1].has_constant.text
                        ^^^^

